test/files/ill-typed/003_let_if.lam
let x = 100 in
  let y = false in
    if iszero (y - x - x) then y + y else x + 10
